# stm32_io_rust

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
src/: main.rs
